--- a/simple/style.css
+++ b/simple/style.css
@@ -44,3 +44,20 @@ main{
 footer{
     text-align: center;
 }
+
+main.posts-list a{
+    color: #333;
+    text-decoration: none;
+}
+main.posts-list article{
+    overflow: hidden;
+    border-bottom: 1px solid #333;
+    padding-bottom: 10px;
+    margin-bottom: 5px;
+}
+
+main.posts-list .readmore-btn{
+    background-color: #333;
+    color: #fff;
+    padding: 8px 16px;
+}
