adding featured image support for the simple theme, modifying templates to accomodate post image and setting excerpt length for content on the theme index

--- a/simple/style.css
+++ b/simple/style.css
@@ -61,3 +61,8 @@ main.posts-list .readmore-btn{
     color: #fff;
     padding: 8px 16px;
 }
+
+.featured-img, .featured-img img{
+    width: 100%;
+    height:auto;
+}
