--- a/simple/style.css
+++ b/simple/style.css
@@ -66,3 +66,22 @@ main.posts-list .readmore-btn{
     width: 100%;
     height:auto;
 }
+
+.main-nav{
+    background-color: #000;
+    color: #fff;
+    padding: 5px;
+}
+.main-nav ul{
+    margin: 0;
+    padding: 0;
+}
+.main-nav li{
+    list-style: none;
+    float: left;
+    padding-right: 15px;
+}
+.main-nav a{
+    color: #fff;
+    text-decoration: none;
+}
